# mednaffe

./: AUTHORS  Building.md  BuildingWindows.md  ChangeLog  CrossCompileToWindows.md  INSTALL  Makefile.am  Makefile.in  NEWS  ProjectHome.md  README  README.md  TODO  aclocal.m4  com.github.mednaffe.json  config.h.in  configure  configure.ac
share/: Makefile  Makefile.am  Makefile.in
share/glade/: Bios.ui  MainWindow.ui  Manager.ui  Preferences.ui  Setup.ui  ff.ui  fps.ui  gb.ui  gba.ui  gg.ui  help.ui  input.ui  keys.ui  lynx.ui  md.ui  misc.ui  nes.ui  netplay.ui  ngp.ui  osd.ui  paths.ui  pce.ui  pce_fast.ui  pcfx.ui  psx.ui  recording.ui  resources.xml  sf.ui  sms.ui  snes.ui  snes_faust.ui  sound.ui  sr.ui  ss.ui  vb.ui  video.ui  wswan.ui
share/glade/catalog/: medcatalog.xml
share/win/: ChangeLog_Mednaffe.txt  NOTICE.txt  README_WINDOWS.txt  mednaffe.rc  mednaffe.res
src/: Makefile.am  Makefile.in  about.c  about.h  active.c  bios.c  bios.h  command.c  common.h  gui.c  input.c  input.h  joystick_linux.c  joystick_linux.h  joystick_win.c  joystick_win.h  list.c  log.c  log.h  logbook.c  logbook.h  logo.h  mainwindow.c  mainwindow.h  manager.c  manager.h  md5.c  md5.h  mednaffe.c  mednaffe_glade.h  medprocess.c  medprocess.h  panedimage.c  panedimage.h  panedlist.c  panedlist.h  pathcombobox.c  pathcombobox.h  preferences.c  preferences.h  (+14 more)
src/widgets/: bios_helper.c  bios_helper.h  dialogs.c  dialogs.h  joystick.h  joystick_dummy.c  joystick_linux.c  joystick_linux.h  joystick_sdl.c  joystick_windows.c  joystick_windows.h  marshallers.c  marshallers.h  medbiosentry.c  medbiosentry.h  medcheckbutton.c  medcheckbutton.h  medcolorentry.c  medcolorentry.h  medcombobox.c  medcombobox.h  meddialogentry.c  meddialogentry.h  medentry.c  medentry.h  medinput.c  medinput.h  medirange.c  medirange.h  medjoy.c  medjoy.h  medlistjoy.c  medlistjoy.h  medrange.c  medrange.h  medscale.c  medscale.h  medspin.c  medspin.h  medwidget.c  (+3 more)
trunk/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
trunk/share/: Makefile
trunk/share/applications/: mednaffe.desktop
trunk/src/: Makefile.am  active.c  command.c  common.h  list.c  mednaffe.c  mednaffe_glade.h  prefs.c  toggles.c  toggles.h
wiki/: Building.wiki  BuildingWindows.wiki  PageName.wiki
