EXTRA_DIST = \
  applications/mednaffe.desktop \
  pixmaps/mednaffe.png \
  icons/hicolor/16x16/apps/mednaffe.png \
  icons/hicolor/32x32/apps/mednaffe.png \
  icons/hicolor/48x48/apps/mednaffe.png \
  icons/hicolor/64x64/apps/mednaffe.png \
  icons/hicolor/128x128/apps/mednaffe.png \
  icons/hicolor/scalable/apps/mednaffe.svg 

# Desktop file
desktopdir = $(datadir)/applications
desktop_DATA = applications/mednaffe.desktop

# Pixmap file
pixmapdir = $(datadir)/pixmaps
pixmap_DATA = pixmaps/mednaffe.png

# Icon files
icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon16_DATA = icons/hicolor/16x16/apps/mednaffe.png

icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon32_DATA = icons/hicolor/32x32/apps/mednaffe.png

icon48dir = $(datadir)/icons/hicolor/48x48/apps
icon48_DATA = icons/hicolor/48x48/apps/mednaffe.png

icon64dir = $(datadir)/icons/hicolor/64x64/apps
icon64_DATA = icons/hicolor/64x64/apps/mednaffe.png

icon128dir = $(datadir)/icons/hicolor/128x128/apps
icon128_DATA = icons/hicolor/128x128/apps/mednaffe.png

iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA = icons/hicolor/scalable/apps/mednaffe.svg
